--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,14 @@ dependencies {
 
     //点击任何键盘外的部分来取消键盘
     implementation 'com.gabrielsamojlo.keyboarddismisser:keyboard-dismisser:1.3.1'
+
+    //tabbar
+    implementation 'com.jpeng:JPTabBar:1.4.0'
+
+    //dialog
+    implementation 'cn.pedant.sweetalert:library:1.3'
+
+
+    //动画toast
+    implementation 'net.steamcrafted:load-toast:1.0.12'
 }
