--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        tools:replace="android:allowBackup,android:icon"
         android:networkSecurityConfig="@xml/network_security_config"
         android:requestLegacyExternalStorage="true"
         android:name=".application.JApplication"
@@ -19,7 +20,9 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute">
         <activity android:name=".ui.user.activity.HomeActivity"
-            android:label="home"/>
+            android:label="home">
+
+        </activity>
 <!--flutteractivity-->
         <activity
             android:name="io.flutter.embedding.android.FlutterActivity"
