--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(":flutter")
+//    implementation project(":flutter")
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.1.0'
@@ -109,4 +109,10 @@ dependencies {
 
 
 
+    //recyclerview 布局管理器
+    implementation 'com.azoft.carousellayoutmanager:carousel:1.2.4'
+
+
+    //滚动文字
+    implementation 'anylife.scrolltextview:ScrollTextviewLib:1.4.6'
 }
