--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,50 +6,46 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
-        tools:replace="android:allowBackup,android:icon"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:requestLegacyExternalStorage="true"
         android:name=".application.JApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_app"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/logo_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,UnusedAttribute">
-        <activity android:name=".ui.user.activity.HomeActivity"
-            android:label="home">
+        tools:ignore="AllowBackup,UnusedAttribute"
+        tools:replace="android:allowBackup,android:icon">
+        <activity android:name=".ui.user.activity.MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--flutteractivity-->
-<!--        <activity-->
-<!--            android:name="io.flutter.embedding.android.FlutterActivity"-->
-<!--            android:theme="@style/TransTheme"-->
-<!--            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"-->
-<!--            android:hardwareAccelerated="true"-->
-<!--            android:windowSoftInputMode="adjustResize" />-->
+        <activity
+            android:name=".ui.user.activity.HomeActivity"
+            android:label="home">
 
-
+        </activity> <!-- flutteractivity -->
+        <!-- <activity -->
+        <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
+        <!-- android:theme="@style/TransTheme" -->
+        <!-- android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" -->
+        <!-- android:hardwareAccelerated="true" -->
+        <!-- android:windowSoftInputMode="adjustResize" /> -->
         <activity
             android:name=".ui.generalActivity.LoginActivity"
-            android:label="@string/title_activity_login" >
-
-        </activity>
+            android:label="@string/app_name"></activity>
         <activity
             android:name=".ui.generalActivity.WebActivity"
-            android:label="@string/title_activity_login" />
-        <activity android:name=".ui.generalActivity.WelcomeActivity">
-
-        </activity>
+            android:label="@string/app_name" />
+        <activity android:name=".ui.generalActivity.WelcomeActivity"></activity>
     </application>
 
 </manifest>
