--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,19 +21,21 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
-        <activity android:name=".ui.generalActivity.AddressManagerActivity"></activity>
+        <activity android:name=".ui.user.activity.ConponGetActivity" />
+        <activity android:name=".ui.user.activity.PayActivity" />
+        <activity android:name=".ui.generalActivity.AddressManagerActivity" />
         <activity android:name=".ui.generalActivity.EditAddressActivity" />
         <activity android:name=".ui.generalActivity.AddressActivity" />
-        <activity android:name=".ui.user.activity.MenuActivity">
+        <activity android:name=".ui.user.activity.MenuActivity" />
+        <activity
+            android:name=".ui.user.activity.HomeActivity"
+            android:label="home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.user.activity.HomeActivity"
-            android:label="home" /> <!-- flutteractivity -->
+        </activity> <!-- flutteractivity -->
         <!-- <activity -->
         <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
         <!-- android:theme="@style/TransTheme" -->
@@ -42,11 +44,13 @@
         <!-- android:windowSoftInputMode="adjustResize" /> -->
         <activity
             android:name=".ui.generalActivity.LoginActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name">
+
+        </activity>
         <activity
             android:name=".ui.generalActivity.WebActivity"
             android:label="@string/app_name" />
-        <activity android:name=".ui.generalActivity.WelcomeActivity" />
+        <activity android:name=".ui.generalActivity.WelcomeActivity"></activity>
     </application>
 
 </manifest>
