--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,5 +126,5 @@ dependencies {
     //未读信息提示
     implementation 'q.rorbin:badgeview:1.1.3'
     //百度地图
-    implementation files('libs\\BaiduLBS_Android.jar')
+    implementation files('libs/BaiduLBS_Android.jar')
 }
