--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,4 +127,10 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     //百度地图
     implementation files('libs/BaiduLBS_Android.jar')
+
+    //操作图片
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    //选择图片
+    implementation 'com.lcw.library:imagepicker:2.1.2'
 }
