--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name=".application.JApplication"
@@ -21,7 +22,12 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
-        <activity android:name=".ui.user.activity.NewEmailActivity"></activity>
+        <activity android:name=".ui.user.activity.AlbumActivity" />
+        <activity android:name=".ui.user.activity.ImgActivity" />
+        <activity android:name=".ui.user.activity.AboutAccountActivity" />
+        <activity android:name=".ui.user.activity.RecentlLoginRecordActivity" />
+        <activity android:name=".ui.user.activity.ChangePhoneActivity" />
+        <activity android:name=".ui.user.activity.NewEmailActivity" />
         <activity android:name=".ui.user.activity.ChangeEmailActivity" />
         <activity android:name=".ui.user.activity.ChangePwdActivity" />
         <activity android:name=".ui.user.activity.SecurityCenterActivity" />
@@ -47,8 +53,12 @@
         <activity android:name=".ui.user.activity.MenuActivity" />
         <activity
             android:name=".ui.user.activity.HomeActivity"
-            android:label="home">
+            android:label="home" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity> <!-- flutteractivity -->
         <!-- <activity -->
         <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
@@ -63,11 +73,7 @@
             android:name=".ui.generalActivity.WebActivity"
             android:label="@string/app_name" />
         <activity android:name=".ui.generalActivity.WelcomeActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
