--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- //震动权限 -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission
+        android:name="android.permission.STATUS_BAR_SERVICE"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:name=".application.JApplication"
@@ -22,6 +27,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
+        <activity android:name=".ui.user.activity.NoticeStyleActivity"></activity>
+        <activity android:name=".ui.user.activity.AudioActivity" />
+        <activity android:name=".ui.user.activity.NotifySoundActivity" />
+        <activity android:name=".ui.user.activity.ChangeNewNickNameActivity" />
         <activity android:name=".ui.user.activity.AlbumActivity" />
         <activity android:name=".ui.user.activity.ImgActivity" />
         <activity android:name=".ui.user.activity.AboutAccountActivity" />
@@ -53,7 +62,8 @@
         <activity android:name=".ui.user.activity.MenuActivity" />
         <activity
             android:name=".ui.user.activity.HomeActivity"
-            android:label="home" >
+            android:label="home"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,9 +82,7 @@
         <activity
             android:name=".ui.generalActivity.WebActivity"
             android:label="@string/app_name" />
-        <activity android:name=".ui.generalActivity.WelcomeActivity">
-
-        </activity>
+        <activity android:name=".ui.generalActivity.WelcomeActivity" />
     </application>
 
 </manifest>
