服务器向客户端推送通知

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,4 +136,7 @@ dependencies {
 
     //label
     implementation 'com.github.linger1216:labelview:v1.1.0'
+
+    //websocket
+    implementation "org.java-websocket:Java-WebSocket:1.5.1"
 }
