--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
     //recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
 
     //圆形图片
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -139,4 +139,16 @@ dependencies {
 
     //websocket
     implementation "org.java-websocket:Java-WebSocket:1.5.1"
+
+    //动态权限框架
+    implementation "org.permissionsdispatcher:permissionsdispatcher:4.7.0"
+    annotationProcessor "org.permissionsdispatcher:permissionsdispatcher-processor:4.7.0"
+
+    //cameraX
+// CameraX core library using camera2 implementation
+    implementation "androidx.camera:camera-camera2:1.0.0-beta06"
+// CameraX Lifecycle Library
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta06"
+// CameraX View class
+    implementation "androidx.camera:camera-view:1.0.0-alpha13"
 }
