--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission
         android:name="android.permission.STATUS_BAR_SERVICE"
         tools:ignore="ProtectedPermissions" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.any" />
 
     <application
         android:name=".application.JApplication"
@@ -27,10 +29,22 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
+        <activity android:name=".ui.user.activity.CameraActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ui.user.activity.AboutActivity" />
+        <activity android:name=".ui.user.activity.BugReportActivity" />
+        <activity android:name=".ui.user.activity.PrivacyActivity" />
+
         <service
             android:name=".service.NotificationService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity android:name=".ui.user.activity.NoticeStyleActivity" />
         <activity android:name=".ui.user.activity.AudioStyleActivity" />
@@ -69,11 +83,7 @@
             android:name=".ui.user.activity.HomeActivity"
             android:label="home"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity> <!-- flutteractivity -->
         <!-- <activity -->
         <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
