分角色登录

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
-        <activity android:name=".ui.user.activity.TransactionActivity"></activity>
+        <activity android:name=".ui.user.activity.TransactionActivity" />
+        <activity android:name=".ui.user.activity.DetailsActivity" />
         <activity android:name=".ui.user.activity.CommentActivity" />
         <activity android:name=".ui.user.activity.UserCommentActivity" />
 
