--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,UnusedAttribute"
         tools:replace="android:allowBackup,android:icon">
+        <activity android:name=".ui.user.activity.TableActivity" />
+        <activity android:name=".ui.generalActivity.SignActivity" />
         <activity android:name=".ui.user.activity.TransactionActivity" />
         <activity android:name=".ui.user.activity.DetailsActivity" />
         <activity android:name=".ui.user.activity.CommentActivity" />
@@ -93,11 +95,7 @@
             android:name=".ui.user.activity.HomeActivity"
             android:label="home"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity> <!-- flutteractivity -->
         <!-- <activity -->
         <!-- android:name="io.flutter.embedding.android.FlutterActivity" -->
@@ -107,7 +105,13 @@
         <!-- android:windowSoftInputMode="adjustResize" /> -->
         <activity
             android:name=".ui.generalActivity.LoginActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.generalActivity.WebActivity"
             android:label="@string/app_name" />
